--- a/src/main/resources/templates/board_write.mustache
+++ b/src/main/resources/templates/board_write.mustache
@@ -25,12 +25,13 @@
             <tr>
                 <td class="col-name">案件名</td>
                 <td>
-                    <input class="input-1"  name="subject" type="text">
+                    <input class="input-1"  name="agendaName" type="text">
                 </td>
             </tr>
             <tr>
                 <td class="col-name">契約期間</td>
                 <td>
+                    <input class="input-1"  name="agenda" type="text">
                     <input class="input-1"  name="term" type="text">
                 </td>
             </tr>
