--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<form action="" method="post" name="login_form">
+<form action="/login.pro" method="post" name="login_form">
     <div class="login-wrapper">
         <div class="top">ログイン</div>
         <div class="login-area">
