날짜 선택 사이즈 변경

--- a/src/main/resources/templates/board_write.mustache
+++ b/src/main/resources/templates/board_write.mustache
@@ -31,8 +31,8 @@
             <tr>
                 <td class="col-name">契約期間</td>
                 <td>
-                    <input class="input-1"  name="agendaStartDate" type="date">
-                    <input class="input-1"  name="agendaEndDate" type="date">
+                    <input class="data-input"  name="agendaStartDate" type="date"> ∼
+                    <input class="data-input"  name="agendaEndDate" type="date">
                 </td>
             </tr>
             <tr>
