안건 작성 화면 퍼블리싱

--- a/src/main/resources/templates/board_write.mustache
+++ b/src/main/resources/templates/board_write.mustache
@@ -44,8 +44,8 @@
             <tr>
                 <td class="col-name">月額単位</td>
                 <td>
-                    <input class="input-1"  name="agendaMinPay" type="text">
-                    <input class="input-1"  name="agendaMaxPay" type="text">
+                    <input class="pay-input"  name="agendaMinPay" type="text"> ∼
+                    <input class="pay-input"  name="agendaMaxPay" type="text"> 万
                 </td>
             </tr>
             <tr>
@@ -57,13 +57,15 @@
             <tr>
                 <td class="col-name">カテゴリー</td>
                 <td>
-                    <input class="input-1"  name="agendaCategory" type="text">
+                    <input type="radio"  name="agendaCategory" value="Java">Java
+                    <input type="radio"  name="agendaCategory" value="php">php
+                    <input type="radio"  name="agendaCategory" value="C/C++">C/C++
                 </td>
             </tr>
             <tr>
                 <td class="col-name">面談回数</td>
                 <td>
-                    <input class="input-1"  name="agendaInterviewNumber" type="text">
+                    <input class="pay-input"  name="agendaInterviewNumber" type="text"> 回
                 </td>
             </tr>
             <tr>
